--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
